# QuantumSetup

./: .gitignore  CITATION.cff  LICENSE  Q_README.md  README.md  autosetup.py  backend_data.txt  examples.csv  pyproject.toml  readme.md  requirements.txt  sample.ipynb  sample.py  sample_noise.ipynb  sample_noise.py  sample_script.py  sample_with_noise.py  samplescript.py  save_account.py  setup.ps1  setup.sh  unix.sh
aer/: readme.md  requirements.txt  sample.py
aer/examples/: bb84.py  bell.ipynb  dense_coding.py  grovers.py  image_edge_detection.py  qaoa_max_cut.py  qrng.ipynb  qrng.py  shor_code.py
azure/: readme.md  requirements.txt  sample.ipynb  sample.py
azure/examples/: bb84.ipynb  bell.ipynb  dense_coding.py  grovers.ipynb  grovers.py  qaoa_max_cut.py  qrng.ipynb  qrng.py  shor_code.ipynb  shor_code.py
braket/: readme.md  sample.py
braket/examples/: bb84.ipynb  bb84.py  bernstein_vazirani.py  ghz.ipynb  grovers.ipynb  qaoa_max_cut.py  qrng.py  shor_code.ipynb  shor_code.py
examples/: bb84.ipynb  bb84.py  bernstein_vazirani.ipynb  bernstein_vazirani.py  grovers.ipynb  grovers.py  qaoa_max_cut.ipynb  qaoa_max_cut.py  qml.py  qrng.ipynb  qrng.py  shor_code.ipynb  shor_code.py
ibm/: readme.md  requirements.txt  requirements_noise.txt  sample.ipynb  sample.py  sample_noise.ipynb  sample_noise.py
ibm/examples/: bb84.ipynb  bb84.py  bell.ipynb  bell.py  bell_noise.ipynb  bell_noise.py  bernstein_vazirani.ipynb  bernstein_vazirani.py  dense_coding.py  ghz.ipynb  ghz.py  grovers.ipynb  qrng.py  (+7 more)
pennylane/: README.md  pyproject.toml
pennylane/default/: bb84.py  bernstein_vazirani.py  dense_coding.py  ghz.py  grover.py  qaoa_max_cut.py  qrng.py  shor_code.py
pennylane/ibm/: bb84.py  bernstein_vazirani.py  dense_coding.py  ghz.py  grovers.py  qaoa_max_cut.py  qrng.py
