[project]
name = "quantumsetup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "amazon-braket-sdk>=1.88.3",
    "azure-quantum[qiskit]>=2.2.0",
    "boto3>=1.35.92",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pylatexenc>=2.10",
    "pyqt5>=5.15.11; sys_platform == 'linux'",
    "python-dotenv>=1.0.1",
    "qiskit>=1.3.1",
    "qiskit-aer>=0.15.1",
    "qiskit-braket-provider>=0.4.1",
    "qiskit-ibm-runtime>=0.34.0",
]
