[project]
name = "quantumsetup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "amazon-braket-sdk",
    "azure-quantum[qiskit]",
    "boto3",
    "ipykernel",
    "matplotlib",
    "pylatexenc",
    "pyqt5; sys_platform == 'linux'",
    "python-dotenv",
    "qiskit",
    "qiskit-aer",
    "qiskit-braket-provider",
    "qiskit-ibm-runtime",
]
